// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index Choice render renders correctly with default props 1`] = `
<BlankContentComp
  classes={
    Object {
      "chip": "BlankContentComp-chip-2",
      "chipLabel": "BlankContentComp-chipLabel-3",
      "choice": "BlankContentComp-choice-1",
      "disabled": "BlankContentComp-disabled-4",
    }
  }
  disabled={false}
  label="Label"
  targetId="1"
  value="1"
/>
`;

exports[`index Choice render renders correctly with disabled prop as true 1`] = `
<BlankContentComp
  classes={
    Object {
      "chip": "BlankContentComp-chip-2",
      "chipLabel": "BlankContentComp-chipLabel-3",
      "choice": "BlankContentComp-choice-1",
      "disabled": "BlankContentComp-disabled-4",
    }
  }
  disabled={true}
  label="Label"
  targetId="1"
  value="1"
/>
`;
